// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when rendering a list table with fixed widths renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  overflow: auto;
  width: 100%;
  position: relative;
  margin: 24px 0;
}

.emotion-1 {
  border-spacing: 0;
  border-collapse: collapse;
  width: 100%;
  color: #1C2D38;
  font-size: 13px;
  line-height: 20px;
}

.emotion-2 {
  background-color: #FFFFFF;
  box-shadow: 0 4px #E8EDEB;
  position: relative;
  color: var(--font-color-primary);
  background-color: #FFFFFF;
  box-shadow: 0 4px #E8EDEB;
}

.dark-theme .emotion-2 {
  background-color: #001E2B;
  box-shadow: 0 4px #3D4F58;
}

.emotion-3 {
  padding: 0 8px;
  overflow: hidden;
  padding-left: 32px;
  padding: 10px 8px!important;
  vertical-align: top;
  color: var(--font-color-primary);
  overflow-wrap: anywhere;
  word-break: break-word;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
}

.emotion-3:focus-visible {
  box-shadow: inset;
}

.emotion-3:last-child {
  padding-right: 24px;
}

.emotion-3 * {
  font-size: 13px!important;
  line-height: inherit;
}

.emotion-3>div {
  height: unset;
  min-height: unset;
}

.emotion-3>div {
  min-height: unset;
  max-height: unset;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-3 *,
.emotion-3 p,
.emotion-3 a {
  line-height: 20px;
}

.emotion-3>div>*,
.emotion-3>div>div p {
  margin: 0 0 12px;
}

.emotion-3>div>div *:last-child,
.emotion-3>div>*:last-child {
  margin-bottom: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 40px;
  transition-property: min-height,max-height,opacity,padding,transform;
  transition-duration: 150ms;
  transition-timing-function: ease;
  opacity: 1;
  min-height: 40px;
  max-height: 40px;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  text-align: left;
}

.emotion-5 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  margin-bottom: 16px;
  color: var(--font-color-primary);
}

.emotion-5 strong,
.emotion-5 b {
  font-weight: 700;
}

.emotion-6 {
  padding: 0 8px;
  overflow: hidden;
  padding: 10px 8px!important;
  vertical-align: top;
  color: var(--font-color-primary);
  overflow-wrap: anywhere;
  word-break: break-word;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
}

.emotion-6:focus-visible {
  box-shadow: inset;
}

.emotion-6:last-child {
  padding-right: 24px;
}

.emotion-6 * {
  font-size: 13px!important;
  line-height: inherit;
}

.emotion-6>div {
  height: unset;
  min-height: unset;
}

.emotion-6>div {
  min-height: unset;
  max-height: unset;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-6 *,
.emotion-6 p,
.emotion-6 a {
  line-height: 20px;
}

.emotion-6>div>*,
.emotion-6>div>div p {
  margin: 0 0 12px;
}

.emotion-6>div>div *:last-child,
.emotion-6>div>*:last-child {
  margin-bottom: 0;
}

<div
    class="emotion-0"
    tabindex="0"
  >
    <table
      class="emotion-1"
    >
      <colgroup>
        <col
          style="width: 5%;"
        />
        <col
          style="width: 10%;"
        />
        <col
          style="width: 15%;"
        />
        <col
          style="width: 20%;"
        />
        <col
          style="width: 30%;"
        />
        <col
          style="width: 20%;"
        />
      </colgroup>
      <thead
        class="emotion-2"
      />
      <tbody>
        <tr
          aria-hidden="false"
          class=""
          data-selected="false"
          id="lg-table-row-0"
        >
          <td
            class="emotion-3"
          >
            <div
              class="emotion-4"
              data-state="entered"
            >
              <p
                class="emotion-5"
              >
                notebook
              </p>
            </div>
          </td>
          <td
            class="emotion-6"
          >
            <div
              class="emotion-4"
              data-state="entered"
            >
              <p
                class="emotion-5"
              >
                50
              </p>
            </div>
          </td>
          <td
            class="emotion-6"
          >
            <div
              class="emotion-4"
              data-state="entered"
            >
              <p
                class="emotion-5"
              >
                8.5x11,in
              </p>
            </div>
          </td>
          <td
            class="emotion-6"
          >
            <div
              class="emotion-4"
              data-state="entered"
            >
              <p
                class="emotion-5"
              >
                A
              </p>
            </div>
          </td>
          <td
            class="emotion-6"
          >
            <div
              class="emotion-4"
              data-state="entered"
            >
              <p
                class="emotion-5"
              >
                college-ruled,perforated
              </p>
            </div>
          </td>
          <td
            class="emotion-6"
          >
            <div
              class="emotion-4"
              data-state="entered"
            >
              <p
                class="emotion-5"
              >
                8
              </p>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`when rendering a list-table directive renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  overflow: auto;
  width: 100%;
  position: relative;
  margin: 24px 0;
}

.emotion-1 {
  border-spacing: 0;
  border-collapse: collapse;
  width: 100%;
  color: #1C2D38;
  font-size: 13px;
  line-height: 20px;
}

.emotion-2 {
  background-color: #FFFFFF;
  box-shadow: 0 4px #E8EDEB;
  position: relative;
  color: var(--font-color-primary);
  background-color: #FFFFFF;
  box-shadow: 0 4px #E8EDEB;
}

.dark-theme .emotion-2 {
  background-color: #001E2B;
  box-shadow: 0 4px #3D4F58;
}

.emotion-3 {
  padding: 0 8px;
  overflow: hidden;
  padding-left: 32px;
  width: 150px;
  padding: 10px 8px!important;
  vertical-align: top;
  color: var(--font-color-primary);
  line-height: 24px;
  font-weight: 600;
  font-size: 13px;
  width: auto;
}

.emotion-3:focus-visible {
  box-shadow: inset;
}

.emotion-3:last-child {
  padding-right: 24px;
}

.emotion-3 * {
  font-size: 13px!important;
  line-height: inherit;
}

.emotion-3>div {
  height: unset;
  min-height: unset;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 40px;
  transition-property: min-height,max-height,opacity,padding,transform;
  transition-duration: 150ms;
  transition-timing-function: ease;
  height: 40px;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  text-align: left;
}

.emotion-5 {
  padding: 0 8px;
  overflow: hidden;
  width: 150px;
  padding: 10px 8px!important;
  vertical-align: top;
  color: var(--font-color-primary);
  line-height: 24px;
  font-weight: 600;
  font-size: 13px;
  width: auto;
}

.emotion-5:focus-visible {
  box-shadow: inset;
}

.emotion-5:last-child {
  padding-right: 24px;
}

.emotion-5 * {
  font-size: 13px!important;
  line-height: inherit;
}

.emotion-5>div {
  height: unset;
  min-height: unset;
}

.emotion-15:nth-of-type(even) {
  background-color: #F9FBFA;
}

.emotion-15:nth-of-type(even) {
  background-color: #F9FBFA;
}

.dark-theme .emotion-15:nth-of-type(even) {
  background-color: #112733;
}

.emotion-16 {
  padding: 0 8px;
  overflow: hidden;
  padding-left: 32px;
  padding: 10px 8px!important;
  vertical-align: top;
  color: var(--font-color-primary);
  overflow-wrap: anywhere;
  word-break: break-word;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  background-color: #F9FBFA;
  border-right: 3px solid #E8EDEB;
  font-weight: 600;
}

.emotion-16:focus-visible {
  box-shadow: inset;
}

.emotion-16:last-child {
  padding-right: 24px;
}

.emotion-16 * {
  font-size: 13px!important;
  line-height: inherit;
}

.emotion-16>div {
  height: unset;
  min-height: unset;
}

.emotion-16>div {
  min-height: unset;
  max-height: unset;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-16 *,
.emotion-16 p,
.emotion-16 a {
  line-height: 20px;
}

.emotion-16>div>*,
.emotion-16>div>div p {
  margin: 0 0 12px;
}

.emotion-16>div>div *:last-child,
.emotion-16>div>*:last-child {
  margin-bottom: 0;
}

.dark-theme .emotion-16 {
  background-color: #112733;
  border-right: 3px solid #3D4F58;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 40px;
  transition-property: min-height,max-height,opacity,padding,transform;
  transition-duration: 150ms;
  transition-timing-function: ease;
  opacity: 1;
  min-height: 40px;
  max-height: 40px;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  text-align: left;
}

.emotion-18 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  margin-bottom: 16px;
  color: var(--font-color-primary);
}

.emotion-18 strong,
.emotion-18 b {
  font-weight: 700;
}

.emotion-19 {
  padding: 0 8px;
  overflow: hidden;
  padding: 10px 8px!important;
  vertical-align: top;
  color: var(--font-color-primary);
  overflow-wrap: anywhere;
  word-break: break-word;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
}

.emotion-19:focus-visible {
  box-shadow: inset;
}

.emotion-19:last-child {
  padding-right: 24px;
}

.emotion-19 * {
  font-size: 13px!important;
  line-height: inherit;
}

.emotion-19>div {
  height: unset;
  min-height: unset;
}

.emotion-19>div {
  min-height: unset;
  max-height: unset;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-19 *,
.emotion-19 p,
.emotion-19 a {
  line-height: 20px;
}

.emotion-19>div>*,
.emotion-19>div>div p {
  margin: 0 0 12px;
}

.emotion-19>div>div *:last-child,
.emotion-19>div>*:last-child {
  margin-bottom: 0;
}

<div
    class="emotion-0"
    tabindex="0"
  >
    <table
      class="emotion-1"
    >
      <thead
        class="emotion-2"
      >
        <tr
          data-testid="leafygreen-ui-header-row"
        >
          <th
            class="emotion-3"
            scope="col"
          >
            <div
              class="emotion-4"
            >
              name
            </div>
          </th>
          <th
            class="emotion-5"
            scope="col"
          >
            <div
              class="emotion-4"
            >
              quantity
            </div>
          </th>
          <th
            class="emotion-5"
            scope="col"
          >
            <div
              class="emotion-4"
            >
              size
            </div>
          </th>
          <th
            class="emotion-5"
            scope="col"
          >
            <div
              class="emotion-4"
            >
              status
            </div>
          </th>
          <th
            class="emotion-5"
            scope="col"
          >
            <div
              class="emotion-4"
            >
              tags
            </div>
          </th>
          <th
            class="emotion-5"
            scope="col"
          >
            <div
              class="emotion-4"
            >
              rating
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          aria-hidden="false"
          class="emotion-15"
          data-selected="false"
          id="lg-table-row-0"
        >
          <td
            class="emotion-16"
            role="rowheader"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <p
                class="emotion-18"
              >
                journal
              </p>
            </div>
          </td>
          <td
            class="emotion-19"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <p
                class="emotion-18"
              >
                25
              </p>
            </div>
          </td>
          <td
            class="emotion-19"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <p
                class="emotion-18"
              >
                14x21,cm
              </p>
            </div>
          </td>
          <td
            class="emotion-19"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <p
                class="emotion-18"
              >
                A
              </p>
            </div>
          </td>
          <td
            class="emotion-19"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <p
                class="emotion-18"
              >
                brown, lined
              </p>
            </div>
          </td>
          <td
            class="emotion-19"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <p
                class="emotion-18"
              >
                9
              </p>
            </div>
          </td>
        </tr>
        <tr
          aria-hidden="false"
          class="emotion-15"
          data-selected="false"
          id="lg-table-row-1"
        >
          <td
            class="emotion-16"
            role="rowheader"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <p
                class="emotion-18"
              >
                notebook
              </p>
            </div>
          </td>
          <td
            class="emotion-19"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <p
                class="emotion-18"
              >
                50
              </p>
            </div>
          </td>
          <td
            class="emotion-19"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <p
                class="emotion-18"
              >
                8.5x11,in
              </p>
            </div>
          </td>
          <td
            class="emotion-19"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <p
                class="emotion-18"
              >
                A
              </p>
            </div>
          </td>
          <td
            class="emotion-19"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <p
                class="emotion-18"
              >
                college-ruled,perforated
              </p>
            </div>
          </td>
          <td
            class="emotion-19"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <p
                class="emotion-18"
              >
                8
              </p>
            </div>
          </td>
        </tr>
        <tr
          aria-hidden="false"
          class="emotion-15"
          data-selected="false"
          id="lg-table-row-2"
        >
          <td
            class="emotion-16"
            role="rowheader"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <p
                class="emotion-18"
              >
                paper
              </p>
            </div>
          </td>
          <td
            class="emotion-19"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <p
                class="emotion-18"
              >
                100
              </p>
            </div>
          </td>
          <td
            class="emotion-19"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <p
                class="emotion-18"
              >
                8.5x11,in
              </p>
            </div>
          </td>
          <td
            class="emotion-19"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <p
                class="emotion-18"
              >
                D
              </p>
            </div>
          </td>
          <td
            class="emotion-19"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <p
                class="emotion-18"
              >
                watercolor
              </p>
            </div>
          </td>
          <td
            class="emotion-19"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <p
                class="emotion-18"
              >
                10
              </p>
            </div>
          </td>
        </tr>
        <tr
          aria-hidden="false"
          class="emotion-15"
          data-selected="false"
          id="lg-table-row-3"
        >
          <td
            class="emotion-16"
            role="rowheader"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <p
                class="emotion-18"
              >
                planner
              </p>
            </div>
          </td>
          <td
            class="emotion-19"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <p
                class="emotion-18"
              >
                75
              </p>
            </div>
          </td>
          <td
            class="emotion-19"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <p
                class="emotion-18"
              >
                22.85x30,cm
              </p>
            </div>
          </td>
          <td
            class="emotion-19"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <p
                class="emotion-18"
              >
                D
              </p>
            </div>
          </td>
          <td
            class="emotion-19"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <p
                class="emotion-18"
              >
                2019
              </p>
            </div>
          </td>
          <td
            class="emotion-19"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <p
                class="emotion-18"
              >
                10
              </p>
            </div>
          </td>
        </tr>
        <tr
          aria-hidden="false"
          class="emotion-15"
          data-selected="false"
          id="lg-table-row-4"
        >
          <td
            class="emotion-16"
            role="rowheader"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <p
                class="emotion-18"
              >
                postcard
              </p>
            </div>
          </td>
          <td
            class="emotion-19"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <p
                class="emotion-18"
              >
                45
              </p>
            </div>
          </td>
          <td
            class="emotion-19"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <p
                class="emotion-18"
              >
                10x,cm
              </p>
            </div>
          </td>
          <td
            class="emotion-19"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <p
                class="emotion-18"
              >
                D
              </p>
            </div>
          </td>
          <td
            class="emotion-19"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <p
                class="emotion-18"
              >
                double-sided,white
              </p>
            </div>
          </td>
          <td
            class="emotion-19"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <p
                class="emotion-18"
              >
                2
              </p>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;
